[package]
name = "df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#polars = { version = "^0.27.2", features = ["parquet", "lazy", "is_in", "rank", "abs", "streaming", "algo"] }
#polars-algo = "^0.27.2"
polars = { git = "https://github.com/pola-rs/polars", branch = "master", features = [
    "parquet", "lazy", "is_in", "rank", "abs", "streaming", "algo", "propagate_nans", "dtype-full", "random"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
